force-app/main/default/objects/FW_TransformationSetting__mdt/FW_TransformationSetting__mdt.object-meta.xml
<CustomObject>
    <description>Transformation Settings</description>
    <label>FW Transformation Setting</label>
    <pluralLabel>FW Transformation Settings</pluralLabel>
</CustomObject>