force-app/main/default/objects/FW_TransformationSetting__mdt/fields/LogAdmin__c.field-meta.xml
<CustomField>
    <fullName>LogAdmin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Log Admin</label>
    <type>Checkbox</type>
</CustomField>