force-app/main/default/objects/FW_TransformationSetting__mdt/fields/LogFail__c.field-meta.xml
<CustomField>
    <fullName>LogFail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Log Fail</label>
    <type>Checkbox</type>
</CustomField>