force-app/main/default/objects/FW_TransformationSetting__mdt/fields/LogInput__c.field-meta.xml
<CustomField>
    <fullName>LogInput__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Log Input</label>
    <type>Checkbox</type>
</CustomField>