force-app/main/default/objects/FW_TransformationSetting__mdt/fields/LogInputPII__c.field-meta.xml
<CustomField>
    <fullName>LogInputPII__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Log Input PII (No PII)</label>
    <type>Checkbox</type>
</CustomField>