force-app/main/default/objects/FW_TransformationSetting__mdt/fields/LogOutput__c.field-meta.xml
<CustomField>
    <fullName>LogOutput__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Log Output</label>
    <type>Checkbox</type>
</CustomField>