force-app/main/default/objects/FW_TransformationSetting__mdt/fields/LogOutputPII__c.field-meta.xml
<CustomField>
    <fullName>LogOutputPII__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Log Output PII (No PII)</label>
    <type>Checkbox</type>
</CustomField>