force-app/main/default/objects/FW_TransformationSetting__mdt/fields/LogWithCallout__c.field-meta.xml
<CustomField>
    <fullName>LogWithCallout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Log With Callout</label>
    <type>Checkbox</type>
</CustomField>