force-app/main/default/objects/FW_TransformationSetting__mdt/fields/NotifyFailure__c.field-meta.xml
<CustomField>
    <fullName>NotifyFailure__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Notify Failure</label>
    <type>Checkbox</type>
</CustomField>