force-app/main/default/objects/FW_TransformationSetting__mdt/fields/ServiceContinuation__c.field-meta.xml
<CustomField>
    <fullName>ServiceContinuation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Continuation</label>
    <type>Checkbox</type>
</CustomField>