force-app/main/default/objects/FW_TransformationSetting__mdt/fields/ServiceContinuationMethod__c.field-meta.xml
<CustomField>
    <fullName>ServiceContinuationMethod__c</fullName>
    <defaultValue>&quot;processResponse&quot;</defaultValue>
    <label>Service Continuation Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>