force-app/main/default/objects/FW_TransformationSetting__mdt/fields/ServiceContinuationTimeout__c.field-meta.xml
<CustomField>
    <fullName>ServiceContinuationTimeout__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Service Continuation Timeout</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>