force-app/main/default/objects/FW_TransformationSetting__mdt/listViews/ViewAll.listView-meta.xml
<ListView>
    <fullName>ViewAll</fullName>
    <columns>MasterLabel</columns>
    <columns>LogStatus__c</columns>
    <columns>LogWithCallout__c</columns>
    <columns>LogInput__c</columns>
    <columns>LogOutput__c</columns>
    <columns>LogInputPII__c</columns>
    <columns>LogOutputPII__c</columns>
    <columns>ServiceContinuation__c</columns>
    <filterScope>Everything</filterScope>
    <label>ViewAll</label>
    <language>en_US</language>
</ListView>